Update CircleCI config

--- a/circle.yml
+++ b/circle.yml
@@ -28,7 +28,7 @@ dependencies:
     # - mkdir -p lib
     # - pip install -r requirements.txt -t lib
 
-    - pip install --upgrade pip setuptools webapp2 jinja2
+    - pip install --upgrade pip setuptools webapp2 jinja2 webob
     # Make sure gcloud is up to date
     - gcloud --quiet components update app
     # authenticate gcloud
