--- a/circle.yml
+++ b/circle.yml
@@ -34,7 +34,7 @@ dependencies:
     # authenticate gcloud
     - gcloud auth activate-service-account --key-file ${HOME}/client-secret.json
     # Replace <your-project-id>
-    - gcloud config set project $GCLOUD_PROJECT
+    - gcloud config set project gae-circleci-integration
 
 test:
   override:
