--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,7 @@ machine:
     PYTHONPATH: ${PYTHONPATH}:${HOME}/google_appengine
 
     # Replace this with your project ID
-    GCLOUD_PROJECT: "gae-circleci-integration"
+    GCLOUD_PROJECT: ${GCLOUD_PROJECT}
 
 dependencies:
   pre:
@@ -23,7 +23,6 @@ dependencies:
     - unzip -q -d $HOME $HOME/google_appengine_1.9.40.zip
     # Retrieve our secrets from the CircleCI environment
     - echo $CLIENT_SECRET | base64 --decode > ${HOME}/client-secret.json
-    # - sed  s/YOUR-API-KEY/$API_KEY/ api_key.py.sample > api_key.py
     # vendor our dependencies
     # - mkdir -p lib
     # - pip install -r requirements.txt -t lib
@@ -34,7 +33,7 @@ dependencies:
     # authenticate gcloud
     - gcloud auth activate-service-account --key-file ${HOME}/client-secret.json
     # Replace <your-project-id>
-    - gcloud config set project gae-circleci-integration
+    - gcloud config set project ${GCLOUD_PROJECT}"
 
 test:
   override:
