--- a/circle.yml
+++ b/circle.yml
@@ -45,8 +45,9 @@ dependencies:
     - sudo apt-get update
     - sudo apt-get install python-openssl python3-openssl
     - sudo rm -rf /opt/google-cloud-sdk/
+    - sudo chown -R $(whoami) /usr/local/bin
     - curl https://sdk.cloud.google.com | bash
-    - sudo source ~/.bashrc
+    - source ~/.bashrc
 
   post:
       # - echo ${GCLOUD_SERVICE_KEY} | base64 --decode > ${HOME}/client-secret.json
