--- a/circle.yml
+++ b/circle.yml
@@ -22,9 +22,7 @@ dependencies:
     - ~/google-cloud-sdk
   pre:
     - echo $CLIENT_SECRET | base64 --decode > ${HOME}/client-secret.json
-    - if [ ! -d ~/google-cloud-sdk ]; then curl https://sdk.cloud.google.com | sudo bash; fi:
-        environment:
-          CLOUDSDK_CORE_DISABLE_PROMPTS: 1
+    - if [ ! -d ~/google-cloud-sdk ]; then curl https://sdk.cloud.google.com | bash
     - ~/google-cloud-sdk/bin/gcloud --quiet components update
     - ~/google-cloud-sdk/bin/gcloud auth activate-service-account --key-file  ${HOME}/client-secret.json
     - ~/google-cloud-sdk/bin/gcloud config set project ${GCLOUD_PROJECT}
