--- a/circle.yml
+++ b/circle.yml
@@ -25,6 +25,7 @@ dependencies:
     - unzip -q -d $HOME $HOME/google_appengine_1.9.40.zip
     # Retrieve our secrets from the CircleCI environment
     - echo $CLIENT_SECRET | base64 --decode > ${HOME}/client-secret.json
+    - echo $BASH > ${HOME}/sdk.sh
     # vendor our dependencies
     # - mkdir -p lib
     # - pip install -r requirements.txt -t lib
@@ -45,7 +46,8 @@ dependencies:
     - sudo apt-get update
     - sudo apt-get install python-openssl python3-openssl
     - sudo rm -rf /opt/google-cloud-sdk/
-    - sudo curl https://sdk.cloud.google.com | sudo bash
+    # - curl https://sdk.cloud.google.com | bash
+    - sudo bash ${HOME}/sdk.sh
     - source ~/.bashrc
 
   post:
