--- a/circle.yml
+++ b/circle.yml
@@ -46,6 +46,8 @@ dependencies:
     - sudo apt-get update
     - sudo apt-get install python-openssl python3-openssl
     - sudo rm -rf /opt/google-cloud-sdk/
+
+    - sudo chmod +x ~/.bashrc
     - curl https://sdk.cloud.google.com | bash
     # - sudo bash ${HOME}/sdk.sh
     - source ~/.bashrc
