--- a/circle.yml
+++ b/circle.yml
@@ -49,8 +49,10 @@ dependencies:
     - sudo chmod +x ~/.bashrc
     - sudo rm -rf /opt/google-cloud-sdk/
 
-    - curl https://sdk.cloud.google.com | bash
-    # - sudo bash ${HOME}/sdk.sh
+    # Action failed: curl https://sdk.cloud.google.com | bash
+    # - curl https://sdk.cloud.google.com | bash
+
+    - sudo bash ${HOME}/sdk.sh
     - source ~/.bashrc
     - which gcloud
 
