--- a/circle.yml
+++ b/circle.yml
@@ -56,9 +56,9 @@ dependencies:
     # - sudo export PATH="/opt/google-cloud-sdk/bin:$PATH"
 
     # The next line updates PATH for the Google Cloud SDK.
-    source "$HOME/google-cloud-sdk/path.bash.inc"
+    - source "$HOME/google-cloud-sdk/path.bash.inc"
     # The next line enables bash completion for gcloud.
-    source "$HOME/google-cloud-sdk/completion.bash.inc"
+    - source "$HOME/google-cloud-sdk/completion.bash.inc"
 
     - source ~/.bashrc
     - which gcloud
