--- a/circle.yml
+++ b/circle.yml
@@ -74,8 +74,8 @@ dependencies:
     # - which gcloud
 
     # - echo ${GCLOUD_SERVICE_KEY} | base64 --decode > ${HOME}/client-secret.json
-    - /opt/google-cloud-sdk/bin/gcloud config set project ${GCLOUD_PROJECT}
-    - /opt/google-cloud-sdk/bin/gcloud --quiet components update
+    - sudo /opt/google-cloud-sdk/bin/gcloud config set project ${GCLOUD_PROJECT}
+    - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components update --version 118.0.0
     # - /opt/google-cloud-sdk/bin/gcloud --quiet components install beta
     - /opt/google-cloud-sdk/bin/gcloud auth activate-service-account ${GCLOUD_SERVICE_ACCOUNT} --key-file ${HOME}/client-secret.json
 
