--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,7 @@ machine:
     PYTHONPATH: ${PYTHONPATH}:${HOME}/google_appengine
 
     # Replace this with your project ID
-    GCLOUD_PROJECT: "gae-circleci-integration"
+    GCLOUD_PROJECT: ${GCLOUD_PROJECT}
 
 dependencies:
   pre:
@@ -34,7 +34,7 @@ dependencies:
     # authenticate gcloud
     - gcloud auth activate-service-account --key-file ${HOME}/client-secret.json
     # Replace <your-project-id>
-    - gcloud config set project gae-circleci-integration
+    - gcloud config set project ${GCLOUD_PROJECT}
 
 test:
   override:
